applying localization and store secure token

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,6 @@
     "password": "Password",
     "login": "Login",
     "forgotPassword": "Forgot Password",
-    "loginWithGoogle": "Login with Google"
+    "loginWithGoogle": "Login with Google",
+    "loginError": "Incorrect email or password!"
 }
