handle localize, form validation, adjusting View component and set global alert state

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,23 @@
     "login": "Login",
     "forgotPassword": "Forgot Password",
     "loginWithGoogle": "Login with Google",
-    "loginError": "Incorrect email or password!"
+    "loginError": "Incorrect email or password!",
+    "orLoginWith": "Or login with",
+    "newHere": "New here?",
+    "signUp": "Sign up",
+    "confirmPassword": "Confirm Password",
+    "register": "Register",
+    "alreadyHaveAccount": "Already have an account",
+    "passwordMinLength": "Password must be at least 6 characters",
+    "phone": "Phone",
+    "registerAccount": "Register Account",
+    "passwordMismatch": "Passwords do not match",
+    "iAlreadyHaveAccount": "I already have an account",
+    "registrationSuccessTitle": "Successfully Registered",
+    "registrationSuccessMessage": "Please log in to continue!",
+    "registrationError": "Registration failed!",
+    "fillAllFields": "Please fill in all fields",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordTooShort": "Password is too short",
+    "emailInUse": "Email is already in use"
 }
