--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -4,5 +4,23 @@
     "login": "Entrar",
     "forgotPassword": "Esqueci minha senha",
     "loginWithGoogle": "Entrar com o Google",
-    "loginError": "Email ou senha incorretos!"
+    "loginError": "Email ou senha incorretos!",
+    "orLoginWith": "Ou entre com",
+    "newHere": "Novo aqui?",
+    "signUp": "Registre-se",
+    "confirmPassword": "Confirmar senha",
+    "register": "Registrar",
+    "alreadyHaveAccount": "Já possuo uma conta",
+    "passwordMinLength": "Senha deve conter pelo menos 6 caracteres",
+    "phone": "Telefone",
+    "registerAccount": "Registrar Conta",
+    "passwordMismatch": "As senhas não coincidem",
+    "iAlreadyHaveAccount": "Já tenho uma conta",
+    "registrationSuccessTitle": "Registrado com sucesso",
+    "registrationSuccessMessage": "Efetue o login para continuar!",
+    "registrationError": "Erro ao registrar!",
+    "fillAllFields": "Por favor, preencha todos os campos",
+    "passwordsDoNotMatch": "As senhas não coincidem",
+    "passwordTooShort": "Senha muito curta",
+    "emailInUse": "Email já está em uso"
 }
